// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OffchainOrderLineItem should render type EXCHANGE_RATE 1`] = `
<DocumentFragment>
  .c0 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c1 {
  cursor: auto;
  color: #7D7D7D;
}

.c2 {
  text-align: right;
  overflow-wrap: break-word;
}

.c3 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-align: left;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

<span
    class=""
    style="display: contents;"
  >
    <span
      class=" _dsp_contents"
    >
      <span
        class=" t_light _dsp_contents is_Theme"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c0 c1 css-142zc9n"
            data-testid="swap-li-label"
          >
            Rate
          </div>
          <div
            class="c0 c2 css-142zc9n"
          >
            <button
              class="c3"
              title="1 USDC = <0.00001 DAI "
            >
              <div
                class="c0 css-142zc9n"
              >
                1 USDC = &lt;0.00001 DAI 
              </div>
               
            </button>
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`OffchainOrderLineItem should render type NETWORK_COST 1`] = `
<DocumentFragment>
  .c0 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c1 {
  cursor: auto;
  color: #7D7D7D;
}

.c2 {
  text-align: right;
  overflow-wrap: break-word;
}

<span
    class=""
    style="display: contents;"
  >
    <span
      class=" _dsp_contents"
    >
      <span
        class=" t_light _dsp_contents is_Theme"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c0 c1 css-142zc9n"
            data-testid="swap-li-label"
          >
            Network cost
          </div>
          <div
            class="c0 c2 css-142zc9n"
          >
            <span>
              $0
            </span>
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`OffchainOrderLineItem should render type TRANSACTION_ID 1`] = `
<DocumentFragment>
  .c0 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c1 {
  cursor: auto;
  color: #7D7D7D;
}

.c2 {
  text-align: right;
  overflow-wrap: break-word;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #FC72FF;
  stroke: #FC72FF;
  font-weight: 500;
}

.c3:hover {
  opacity: 0.6;
}

.c3:active {
  opacity: 0.4;
}

<span
    class=""
    style="display: contents;"
  >
    <span
      class=" _dsp_contents"
    >
      <span
        class=" t_light _dsp_contents is_Theme"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
        >
          <div
            class="c0 c1 css-142zc9n"
            data-testid="swap-li-label"
          >
            Transaction ID
          </div>
          <div
            class="c0 c2 css-142zc9n"
          >
            <a
              class="c3"
              href="https://etherscan.io/tx/0x123"
              rel="noopener noreferrer"
              target="_blank"
            >
              0x12...x123
            </a>
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</DocumentFragment>
`;
